fix: eliminar gap y padding en el formulario de CreateDog

--- a/client/src/css/CreateDog.module.css
+++ b/client/src/css/CreateDog.module.css
@@ -24,8 +24,6 @@
     justify-content: center;
     margin         : auto;
     flex-direction : column;
-    gap           : 1rem;
-    padding        : 1rem;
     height: 100vh;
     background-color: #498649;
 }
